--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ nav {
     text-align: center;
     position: absolute;
     top: 30%;
-    left: 18%;
+    left: 14%;
     color: #fff;
 }
 
@@ -209,4 +209,25 @@ hr {
 
 #experience img {
     width: 45px;
+}
+
+.link a,
+.link1 a {
+    color: #5a655d;
+}
+
+.link img {
+    width: 25px;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.link1 img {
+    width: 35px;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.link2 {
+    width: 65px;
 }
